# project_positronic_brain

./: .gitignore  CITATION.cff  LICENSE  README.md  app.py  interact.py  pyproject.toml  requirements.txt  seed.py  train.py  train_language.py  visualize.py
.github/workflows/: ci.yml
docs/: architecture.md  biological_mechanisms.md  generative_language_model.md  multimodal_live_learning.md  scaling_plan.md  scaling_to_frontier.md  scientific_background.md  visualizer_guide.md  zones_and_brain_regions.md
examples/: inference_demo.ipynb
positronic_brain/: __init__.py  connectivity.py  corpus.py  datasets.py  diagnostics.py  emergent.py  encoders.py  eprop.py  language.py  model.py  multimodal.py  multimodal_data.py  online.py  preference.py  repro.py  specialization.py  streaming.py  utils.py  zones.py
tests/: test_brain.py  test_divnorm.py  test_emergent.py  test_eprop.py  test_homeostasis.py  test_laminar.py  test_language.py  test_mechanisms.py  test_multimodal.py  test_multimodal_specialization.py  test_stp.py
